# backstage-reasoning

./: README.md  pyproject.toml  run_rl_pair.py
backstage/: __init__.py
backstage/office_sandbox/: __init__.py  agent.py  batch_runner.py  cli.py  episode_runner.py  policy.py  prefill.py  runtime.py  seeds.py  state.py  vllm_backend.py
backstage/office_sandbox/conf/: run_office_batch.yaml
docs/: roadmap.md
docs/historical/: README.md  design-doc.md  multi-step-performativity.md  rl-pair-performativity.md
performativity/: __init__.py
performativity/experiments/: rl_pair.py
performativity/inference/: local_model.py  trace.py
performativity/judges/: cot_monitor.py
performativity/office_sandbox/: __init__.py  policy.py  prefill.py  runtime.py  seeds.py
performativity/probes/: trainer.py
scripts/: local_hf_openai_server.py  smoke_vllm_backend.py
tests/: test_agent.py  test_batch_runner.py  test_cli.py  test_episode_runner.py  test_office_sandbox.py  test_vllm_backend.py
