[project]
name = "backstage-reasoning"
version = "0.1.0"
description = "Backstage Reasoning experiments for auditing grounded agent trajectories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "datasets",
    "numpy",
    "scipy",
    "scikit-learn",
    "openai",
    "matplotlib",
    "seaborn",
    "pyyaml",
    "anthropic>=0.93.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backstage"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
    "SIM108", # ternary operator suggestions
]

[tool.ruff.lint.isort]
known-first-party = ["backstage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
